--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "express": "^4.19.2",
     "mongodb": "^6.6.1",
     "multer": "^1.4.5-lts.1",
-    "next": "^14.0.4",
+    "next": "^14.2.21",
     "next-auth": "^4.24.6",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
+    "react-is": "^19.0.0",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
@@ -44,7 +45,7 @@
     "postcss": "^8",
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "^3",
-    "three": "^0.157.0",
+    "three": "^0.159.0",
     "typescript": "^5"
   }
 }
